[package]
name = "haema-server"
version = "0.1.0"
edition = "2024"

[dependencies]
haema-ff-sys = { path = "../haema-ff-sys" }
axum = { version = "0.8.4", features = ["macros"] }
regex = "1.11.2"
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["process", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
